welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: identifier expected but integer literal found.
	var diag: Double=-1
                          ^